--- a/ci-operator/config/openshift/check-payload/openshift-check-payload-main.yaml
+++ b/ci-operator/config/openshift/check-payload/openshift-check-payload-main.yaml
@@ -1,4 +1,8 @@
 base_images:
+  base:
+    name: "4.14"
+    namespace: ocp
+    tag: base
   golangci-lint:
     name: golangci-lint
     namespace: ci
@@ -9,6 +13,23 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.19
+images:
+- dockerfile_path: Dockerfile
+  from: base
+  to: check-payload
+promotion:
+  name: "4.14"
+  namespace: ocp
+releases:
+  initial:
+    integration:
+      name: "4.14"
+      namespace: ocp
+  latest:
+    integration:
+      include_built_images: true
+      name: "4.14"
+      namespace: ocp
 resources:
   '*':
     limits:
